@@ -5,6 +5,7 @@
  - enh: apply button in upload settings only affects cache location
  - enh: move "apply" button in downloads settings next to "browse" button
  - ref: remove unnecessary custom signals for preferences dialog
+ - ref: reorder and rename internal settings dialog methods
  - ref: decorate PyQtSlots
  - tests: restore previous users settings after testing
 0.17.3
